# main.py
@@ -2,6 +2,7 @@ from flask import Flask, render_template, request, jsonify
 from flask_restx import Api, Resource
 from flask_cors import CORS
 from Utills.Stock.kasina import KASINA
+from Utills.Stock.abc import ABCMART
 
 
 app = Flask(__name__)
@@ -20,6 +21,14 @@ class Kasina(Resource):
     def get(self):
         data = request.args.to_dict()["product_code"]
         output = KASINA().run(data)
+        return jsonify(output)
+
+
+@api.route("/abcmart")
+class Abc(Resource):
+    def get(self):
+        data = request.args.to_dict()
+        output = ABCMART().run(data)
         return jsonify(output)
 
 
